fix: keyboard layout applet doesn't show actual layout

BUG: 425343